# mint-software-center

./: AUTHORS  Makefile.am  Makefile.in  TODO  aclocal.m4  configure  configure.ac  lubuntu-software-center.desktop.in  mint-software-center  mint-software-center.desktop.desktop
data/: lsc.ui
data/man/: lubuntu-software-center-build-db.1  lubuntu-software-center.1
debian/: changelog  control  lubuntu-software-center.manpages  lubuntu-software-center.postinst  watch
po/: LINGUAS  POTFILES.in  ar.po  bg.po  bs.po  ca.po  cs.po  de.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ms.po  nap.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sr.po  sv.po  te.po  tr.po  zh_CN.po  zh_HK.po  zh_TW.po
scripts/: lubuntu-software-center-build-db
src/: UI.py
